# bochka-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVOPS_TASKS.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.tests.yml  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  deploy.yml  tests.yml
alembic/: env.py  seeds.yml
alembic/versions/: 2025_03_15_1936-61fd8eb3d64d_.py  2025_03_15_2029-958d67ebfc49_.py  2025_03_16_0041-526970847e33_.py  2025_03_17_1650-e37ad1745820_.py  2025_05_21_1932-f15e03fc8d52_.py  2025_05_27_1851-611c80269098_.py  2025_05_30_2236-34ba0464f99f_.py  2025_05_30_2243-d685fe3f0b00_.py  2025_06_01_2208-ba6b98d7a141_.py  2025_06_01_2246-5533b0a0842e_.py  2025_06_03_1508-beadc959bc89_.py  2025_06_04_2022-d68d44bb0876_.py  2025_06_04_2045-bc52ac8181fe_.py  2025_06_05_2355-e4f2f0c3f265_.py  2025_06_06_1757-d139b714fb52_.py  2025_06_06_2051-172ee5894be3_.py  2025_06_07_1929-6b374062f51d_.py  2025_06_07_2221-2f272ff8c644_.py  2025_06_09_1442-d305645d463e_.py
docker/: Dockerfile.prod
src/: config.py
src/api/v1/: __init__.py
src/api/v1/routers/: __init__.py  admin.py  balance.py  order.py  public.py
src/app/: __init__.py  error_handlers.py
src/app/api/: __init__.py  error_handlers.py
src/app/api/dependencies/: __init__.py  error_handlers.py  exceptions.py  permissions.py  queries.py  services.py  uow.py
src/app/api/v1/: __init__.py  dependencies.py
src/app/api/v1/routers/: __init__.py  admin.py  balance.py  debug.py  order.py  public.py
src/app/models/: __init__.py  balance.py  balance_operation.py  instrument.py  order.py  transaction.py  user.py
src/app/repositories/: __init__.py  balance_operations.py  balances.py  instruments.py  orders.py  transactions.py  users.py
src/app/schemas/: __init__.py  balance.py  balance_operations.py  instruments.py  orders.py  transactions.py  users.py
src/app/services/: __init__.py  auth.py  balance_operations.py  balances.py  exceptions.py  instruments.py  orders.py  transactions.py  users.py
src/app/utils/: __init__.py  order_manager.py  orderbook.py
src/core/: __init__.py  config.py  custom_types.py  db.py  error_handlers.py  exceptions.py  logger.py  uow.py
src/core/middlewares/: __init__.py  log_middleware.py
src/core/models/: base.py  sqlalchemy.py
src/core/repositories/: __init__.py  abstract.py  exceptions.py  sqlalchemy.py
src/core/schemas/: __init__.py  filter.py
src/core/services/: __init__.py  base.py  exceptions.py
src/core/settings/: __init__.py  env_config.py  logger.py  mongodb.py  postgresql.py
src/core/utils/decorators/: __init__.py  log_operation.py  retry.py
src/db/: db.py
src/models/: __init__.py  balance.py  base.py  instrument.py  order.py  user.py
src/worker/: Dockerfile  worker.py
tests/: conftest.py  test_utils.py
tests/admin/: test_balance_deposit.py  test_balance_withdraw.py  test_instruments.py
tests/balance/: test_balance.py
tests/order/: test_orderbook.py  test_orders.py
tests/orders/: test_orderbook.py  test_orders.py
tests/public/: test_register.py
tests/retry/: test_retry.py
tests/unit/: test_filter_schema.py  test_singleton.py
www/: docker_compose_example  dockerfile_example  dockerfile_example_2
